# usvg-nostd

./: Cargo.toml
float-cmp/src/: eq.rs
imagesize/: Cargo.toml
imagesize/src/: lib.rs  util.rs
imagesize/src/formats/: aesprite.rs  bmp.rs  dds.rs  exr.rs  farbfeld.rs  gif.rs  hdr.rs  heif.rs  ico.rs  jpeg.rs  ktx2.rs  mod.rs  png.rs  pnm.rs  psd.rs  qoi.rs  tga.rs  tiff.rs  vtf.rs  webp.rs
kurbo/: Cargo.toml
kurbo/src/: common.rs  lib.rs  svg.rs
pdf-writer/: Cargo.toml
pdf-writer/src/: annotations.rs  buf.rs  chunk.rs  font.rs  lib.rs  macros.rs  object.rs  renumber.rs  structure.rs
simplecss/: Cargo.toml
simplecss/src/: lib.rs  selector.rs
strict-num/: Cargo.toml
svg2pdf/: Cargo.toml
svg2pdf/src/: lib.rs
svg2pdf/src/render/: clip_path.rs  filter.rs  gradient.rs  group.rs  image.rs  mask.rs  mod.rs  path.rs  pattern.rs
svg2pdf/src/util/: allocate.rs  context.rs  defer.rs  helper.rs
svgtypes/: Cargo.toml
svgtypes/src/: angle.rs  aspect_ratio.rs  color.rs  colors.rs  directional_position.rs  enable_background.rs  error.rs  filter_functions.rs  funciri.rs  length.rs  lib.rs  number.rs  paint.rs  paint_order.rs  path.rs  stream.rs  transform.rs  transform_origin.rs  viewbox.rs
usvg/: Cargo.toml
usvg-parser/: Cargo.toml
usvg-parser/codegen/: main.rs
usvg-parser/src/: clippath.rs  converter.rs  filter.rs  image.rs  lib.rs  marker.rs  mask.rs  options.rs  paint_server.rs  shapes.rs  style.rs  switch.rs  text.rs  units.rs  use_node.rs
usvg-parser/src/svgtree/: mod.rs  names.rs  parse.rs  text.rs
usvg-tree/: Cargo.toml
usvg-tree/src/: filter.rs  geom.rs  lib.rs  text.rs
usvg/src/: lib.rs  writer.rs
xmlwriter/: Cargo.toml
xmlwriter/src/: lib.rs
