[package]
name = "usvg-parser"
version = "0.38.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
edition = "2021"
description = "An SVG parser used by usvg."
categories = ["multimedia::images"]
repository = "https://github.com/RazrFalcon/resvg"
documentation = "https://docs.rs/usvg-parser/"
readme = "README.md"
exclude = ["tests"]

[dependencies]
data-url = "0.3" # for href parsing
hashbrown = { version = "0.12", default-features = false, features = ["ahash"] }
imagesize = { path = "../imagesize" } # raster images size detection
kurbo = { path = "../kurbo" }
log = "0.4"
no_std_io = { version = "^0.5", features = ["alloc"] }
roxmltree = { version = "0.19", default-features = false }
simplecss = "0.2"
siphasher = "0.3" # perfect hash implementation
svgtypes = { path = "../svgtypes" }
usvg-tree = { version = "0.38.0", path = "../usvg-tree" }
