[package]
name = "usvg-tree"
version = "0.38.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
edition = "2021"
description = "An SVG tree representation used by usvg."
categories = ["multimedia::images"]
repository = "https://github.com/RazrFalcon/resvg"
documentation = "https://docs.rs/usvg-tree/"
readme = "README.md"

[dependencies]
strict-num = { version = "0.1", default-features = false, features = ["approx-eq"] }
svgtypes = "0.13"
tiny-skia-path = { version = "0.11.3", default-features = false, features = ["no-std-float"]}
