[package]
name = "usvg"
version = "0.38.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
edition = "2021"
description = "An SVG simplification library."
categories = ["multimedia::images"]

[dependencies]
ahash = { version = "0.8.6", default-features = false }
base64 = { version = "0.21.7", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.14.3" }
log = "0.4"
no_std_io = { version = "^0.5", features = ["alloc"] }
usvg-parser = { path = "../usvg-parser", version = "0.38.0" }
usvg-tree = { path = "../usvg-tree", version = "0.38.0" }
xmlwriter = "0.1"

[dev-dependencies]
once_cell = "1.5"
