[package]
name = "usvg"
version = "0.38.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
edition = "2021"
description = "An SVG simplification library."
categories = ["multimedia::images"]
repository = "https://github.com/RazrFalcon/resvg"
documentation = "https://docs.rs/usvg/"
readme = "README.md"
exclude = ["tests"]

[dependencies]
ahash = { version = "0.8.6", default-features = false }
base64 = { version = "0.21", default-features = false, features = ["alloc"] } # for embedded images
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
log = "0.4"
no_std_io = { version = "^0.5", features = ["alloc"] }
usvg-parser = { version = "0.38.0", path = "../usvg-parser" }
usvg-tree = { version = "0.38.0", path = "../usvg-tree" }
xmlwriter = "0.1"

[features]
default = []
