[package]
name = "usvg"
version = "0.38.0"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg"]
license = "MPL-2.0"
edition = "2021"
description = "An SVG simplification library."
categories = ["multimedia::images"]
repository = "https://github.com/RazrFalcon/resvg"
documentation = "https://docs.rs/usvg/"
readme = "README.md"
exclude = ["tests"]

[dependencies]
base64 = { version = "0.21", default-features = false, features = ["alloc"] } # for embedded images
kurbo = { path = "../kurbo" }
log = "0.4"
no_std_io = { version = "^0.5", features = ["alloc"] }
siphasher = "0.3"
usvg-parser = { version = "0.38.0", path = "../usvg-parser" }
usvg-tree = { version = "0.38.0", path = "../usvg-tree" }
xmlwriter = { version = "0.1", path = "../xmlwriter" }

[features]
default = []
